[package]
name = "bapp-api-client"
version = "0.4.0"
edition = "2021"
description = "BAPP Auto API Client for Rust"
readme = "README.md"
license = "MIT"
homepage = "https://www.bapp.ro"
repository = "https://github.com/bapp-open/sdk-rust"
keywords = ["bapp", "api", "client"]
categories = ["api-bindings"]

[dependencies]
reqwest = { version = "0.12", features = ["json", "multipart"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
